--- a/src/app/admin/adminrecipes/adminrecipes.component.html
+++ b/src/app/admin/adminrecipes/adminrecipes.component.html
@@ -41,7 +41,7 @@
                             <td>
                                 <button class="btn btn-outline-primary me-3"><i
                                         class="fa-solid fa-pen-square"></i></button>
-                                <button class="btn btn-outline-danger"><i class="fa-solid fa-trash-can"></i></button>
+                                <button type="button" (click)="deleteRecipe(item._id)" class="btn btn-outline-danger"><i class="fa-solid fa-trash-can"></i></button>
                             </td>
                         </tr>
                         }
@@ -133,89 +133,97 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="container-fluid">
-                    <!-- 0  -->
-                    <div class="row d-flex justify-content-center align-items-center flex-row">
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Name of the recipe" class="form-control" />
+                <form [formGroup]="recipeForm">
+                    <div class="container-fluid">
+                        <!-- 0  -->
+                        <div class="row d-flex justify-content-center align-items-center flex-row">
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="recipeName" formControlName="recipeName" placeholder="Name of the recipe" class="form-control" />
+                                 @if(recipeForm.get('recipeName')?.errors && recipeForm.get('recipeName')?.touched){
+                        <span class="text-danger" style="font-size: 10px;">Input value must be alphabetc</span>
+                        }
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="serving" formControlName="serving" placeholder="Servings" class="form-control" />
+                            </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Servings" class="form-control" />
+                        <!-- 1 -->
+                        <div class="row d-flex justify-content-center align-items-center flex-row">
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="pretime" formControlName="pretime" placeholder="Preparation Time" class="form-control" />
+    
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="cookingTime" formControlName="cookingTime" placeholder="Cooking Time" class="form-control" />
+    
+                            </div>
                         </div>
-                    </div>
-                    <!-- 1 -->
-                    <div class="row d-flex justify-content-center align-items-center flex-row">
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Preparation Time" class="form-control" />
-
+                        <!-- 2 -->
+                        <div class="row d-flex justify-content-center align-items-center flex-row">
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="calories" formControlName="calories" placeholder="Calories" class="form-control" />
+    
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <input type="text" name="rating" formControlName="rating" placeholder="Ratings" class="form-control" />
+    
+    
+                            </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Cooking Time" class="form-control" />
-
+    
+                        <!-- modeof cooking  -->
+                        <div class="mb-3">
+                            <select name="modeofCooking" formControlName="modeofCooking" name="" id="" class="form-select">
+                                <option [defaultSelected]="true" value="">Mode of Cooking</option>
+                                <option value="easy">Easy</option>
+                                <option value="medium">Medium</option>
+                                <option value="hard">Hard</option>
+                            </select>
                         </div>
-                    </div>
-                    <!-- 2 -->
-                    <div class="row d-flex justify-content-center align-items-center flex-row">
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Calories" class="form-control" />
-
+    
+                        <!-- mealtype  -->
+    
+                        <ng-multiselect-dropdown class="" [placeholder]="'select'" [settings]="dropdownSettings"
+                            [data]="dropdownList"  (onSelect)="onItemSelect($event)" 
+                             (onSelectAll)="onSelectAll($event)"
+                             (onDeSelectAll)="onDeleteAll()"
+                              (onDeSelect)="onDeleteItem($event)">
+                            
+                        </ng-multiselect-dropdown>
+    
+    
+                        <!-- cusine type  -->
+                        <div class="mb-3 mt-3">
+                            <select name="cuisineTypes" formControlName="cuisineTypes" name="" id="" class="form-select">
+                                <option [defaultSelected]="true" value="" disabled>Cuisine Type</option>
+                                @for( cuisine of cuisineTypes ;track $index){
+                                <option [value]="cuisine">{{ cuisine }}</option>
+                                }
+                            </select>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <input type="text" placeholder="Ratings" class="form-control" />
-
-
+                        <!-- incredan -->
+                        <div class="mb-3 d-flex align-items-center justify-content-center">
+                            <input #ingre type="text" placeholder="Ingredients" class="form-control" />
+                            <button (click)="addIngredients(ingre)" class=" btn bg-success">add</button>
                         </div>
+                        <div class="mb-3 d-flex align-items-center justify-content-center">
+                            <input #instru type="text" placeholder="Instructions" class="form-control" />
+                            <button (click)="addInstructions(instru)" class=" btn bg-success">add</button>
+    
+                        </div>
+    
+                        <div class="mb-3">
+                            <label for="">UploadImage</label>
+                            <input (change)="getFile($event)" type="file" placeholder="Recipe Image" class="form-control" />
+                        </div>
+    
                     </div>
-
-                    <!-- modeof cooking  -->
-                    <div class="mb-3">
-                        <select name="" id="" class="form-select">
-                            <option [defaultSelected]="true" value="">Mode of Cooking</option>
-                            <option value="easy">Easy</option>
-                            <option value="medium">Medium</option>
-                            <option value="hard">Hard</option>
-                        </select>
-                    </div>
-
-                    <!-- mealtype  -->
-
-                    <ng-multiselect-dropdown class="" [placeholder]="'select'" [settings]="dropdownSettings"
-                        [data]="dropdownList" [(ngModel)]="selectedItems" (onSelect)="onItemSelect($event)" 
-                         (onSelectAll)="onSelectAll($event)">
-                        
-                    </ng-multiselect-dropdown>
-
-
-                    <!-- cusine type  -->
-                    <div class="mb-3 mt-3">
-                        <select name="" id="" class="form-select">
-                            <option [defaultSelected]="true" value="" disabled>Cuisine Type</option>
-                            @for( cuisine of cuisineTypes ;track $index){
-                            <option [value]="cuisine">{{ cuisine }}</option>
-                            }
-                        </select>
-                    </div>
-                    <!-- incredan -->
-                    <div class="mb-3 d-flex align-items-center justify-content-center">
-                        <input type="text" placeholder="Ingredients" class="form-control" />
-                        <button class=" btn bg-success">add</button>
-                    </div>
-                    <div class="mb-3 d-flex align-items-center justify-content-center">
-                        <input type="text" placeholder="Instructions" class="form-control" />
-                        <button class=" btn bg-success">add</button>
-
-                    </div>
-
-                    <div class="mb-3">
-                        <input type="file" placeholder="Recipe Image" class="form-control" />
-                    </div>
-
-                </div>
+                </form>
 
             </div>
             <div class="modal-footer p-3">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Reset</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" (click)="save()" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
