99%completed |added chart and calander

--- a/src/app/admin/adminheader/adminheader.component.html
+++ b/src/app/admin/adminheader/adminheader.component.html
@@ -4,6 +4,6 @@
        <i class="fa-solid fa-kitchen-set me-2 fa-2x "></i>
       <span class="fs-3">CookPedia</span>
     </h3>
-    <button class="btn btn-outline-light"><i class="fa-solid fa-power-off"></i>Logout</button>
+    <button (click)="logout()" class="btn btn-outline-light"><i class="fa-solid fa-power-off"></i>Logout</button>
   </div>
 </nav>
