--- a/src/app/admin/adminhome/adminhome.component.html
+++ b/src/app/admin/adminhome/adminhome.component.html
@@ -6,10 +6,10 @@
         </div>
         <div class="col-md-10 p-0 m-0">
             <div class="w-100 bg-warning p-2">
-                <h1>
+                <h3>
                     <i class="fa-solid fa-bars me-3"></i>
                     Dashboard
-                </h1>
+                </h3>
             </div>
             <div class="row">
                 <div class="col-md-3 py-3 px-4">
@@ -19,7 +19,7 @@
                                 <i class="fa-solid fa-user fa-2x"></i>
                             </div>
                             <div class="col-md-9">
-                                <h5>Users : {{allusers.length-1}}</h5>
+                                <h6>Users : {{allusers.length-1}}</h6>
                             </div>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
                                 <i class="fa-solid fa-bowl-rice fa-2x"></i>
                             </div>
                             <div class="col-md-9">
-                                <h5>Recipes: {{allRecipes.length-1}}</h5>
+                                <h6>Recipes: {{allRecipes.length-1}}</h6>
                             </div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                                 <i class="fa-solid fa-download fa-2x"></i>
                             </div>
                             <div class="col-md-9">
-                                <h5>Downloads {{totalCount}}</h5>
+                                <h6>Downloads {{totalCount}}</h6>
                             </div>
                         </div>
                     </div>
@@ -55,13 +55,27 @@
                                 <i class="fa-solid fa-message fa-2x"></i>
                             </div>
                             <div class="col-md-9">
-                                <h5>Notification 12</h5>
+                                <h6>Notification 12</h6>
                             </div>
                         </div>
                     </div>
                 </div>
 
             </div>
+            <div class="row">
+                <div class="col-md-7">
+                    <!-- graphs -->
+                    <highcharts-chart [options]="chartOptions"
+                         class="chart" style="width: 100%;height: 400px;display:block"  />
+                </div>
+                <div class="col-md-5 d-flex justify-content-center align-items-center mt-5">
+                    <!-- calander -->
+                    <mat-card class="demo-inline-calendar-card">
+                        <mat-calendar [(selected)]="selected"></mat-calendar>
+                    </mat-card>
+                </div>
+            </div>
         </div>
+
     </div>
 </div>
